numeric value based comparison between int and double